# pkg/apis/resource/zz_generated.deepcopy.go
@@ -1160,6 +1160,16 @@ func (in *OpaqueDeviceConfiguration) DeepCopy() *OpaqueDeviceConfiguration {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *PartitionTypeStatus) DeepCopyInto(out *PartitionTypeStatus) {
 	*out = *in
+	if in.Total != nil {
+		in, out := &in.Total, &out.Total
+		*out = new(int32)
+		**out = **in
+	}
+	if in.Allocatable != nil {
+		in, out := &in.Allocatable, &out.Allocatable
+		*out = new(int32)
+		**out = **in
+	}
 	return
 }
 
@@ -1214,7 +1224,9 @@ func (in *PoolStatus) DeepCopyInto(out *PoolStatus) {
 	if in.PartitionSummary != nil {
 		in, out := &in.PartitionSummary, &out.PartitionSummary
 		*out = make([]PartitionTypeStatus, len(*in))
-		copy(*out, *in)
+		for i := range *in {
+			(*in)[i].DeepCopyInto(&(*out)[i])
+		}
 	}
 	if in.CounterSets != nil {
 		in, out := &in.CounterSets, &out.CounterSets
@@ -1726,6 +1738,16 @@ func (in *ShareableCapacityStatus) DeepCopy() *ShareableCapacityStatus {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *ShareableSummaryStatus) DeepCopyInto(out *ShareableSummaryStatus) {
 	*out = *in
+	if in.FullyAvailableDevices != nil {
+		in, out := &in.FullyAvailableDevices, &out.FullyAvailableDevices
+		*out = new(int32)
+		**out = **in
+	}
+	if in.PartiallyAvailableDevices != nil {
+		in, out := &in.PartiallyAvailableDevices, &out.PartiallyAvailableDevices
+		*out = new(int32)
+		**out = **in
+	}
 	if in.Capacity != nil {
 		in, out := &in.Capacity, &out.Capacity
 		*out = make([]ShareableCapacityStatus, len(*in))
